# CRAIC_Real

./: .gitignore
shfiles/: run_ego_planner.sh
src/aruco_det/scripts/: aruco_det.py
src/core_fly/: CMakeLists.txt  package.xml
src/core_fly/include/: core_fly.hpp  core_fly_handle.hpp
src/core_fly/launch/: core_fly.launch
src/core_fly/src/: core_fly.cpp  core_fly_handle.cpp  main.cpp
src/fast_perching/: CMakeLists.txt  package.xml
src/fast_perching/include/: fast_perching.hpp  fast_perching_handle.hpp
src/fast_perching/launch/: fast_perching.launch
src/fast_perching/src/: fast_perching.cpp  fast_perching_handle.cpp  main.cpp
src/land_passive/: CMakeLists.txt  package.xml
src/land_passive/include/: math_utils.h
src/land_passive/src/: main.cpp
src/offboard_pkg/: CMakeLists.txt  CMakeLists_for_msg.txt  CMakeLists_raw.txt
src/offboard_pkg/config/: camera_param.yaml  gimbal_camera.yaml  rflysim_camera.yaml  t265_camera_param.yaml
src/offboard_pkg/include/: message_utils.h
src/offboard_pkg/launch/: aruco_det.launch  astar_to_mavros.launch  circle_det.launch  move_base.launch  move_base_rviz.launch  multi_aruco_circle_track_wait_land.launch  multi_aruco_det.launch  multi_aruco_track_circle_fit_land.launch  setpoint_py.launch  square_setpoint.launch  usb_cam0.launch  usb_cam0_1920_1080.launch  yaw_rate.launch
src/offboard_pkg/msg/: Distance.msg  Line.msg  Lines.msg
src/offboard_pkg/scripts_for_lidar/: ObjectDetect.py  demo.py  readme.md  start.sh
src/offboard_pkg/sh/: aruco_land_dynamic_circle2.sh  aruco_land_static.sh  aruco_track.sh  astar.sh  cartographer_t265.sh  cartographer_t265_move_base.sh  d435i_color_circle_cross.sh  d435i_color_circle_track.sh  ego_circle_cross_ego_aruco_land.sh  multi_aruco_circle_track_wait_land.sh  multi_aruco_land_static.sh  multi_aruco_track.sh  multi_aruco_track_circle_fit_land.sh  t265_circle_cross.sh  t265_circle_cross_astar.sh  t265_circle_cross_astar_aruco_land.sh  t265_localization.sh  t265_square_setpoint.sh  ttyTHS0.sh
src/px4ctrl/config/: ctrl_param_fpv.yaml
src/px4ctrl/launch/: run_node.launch
src/px4ctrl/src/: PX4Ctrlfsm.cpp  PX4Ctrlnode.cpp  ROScallback.cpp
src/state_machine/launch/: state_machine.launch
src/state_machine/scripts/: state_machine.py
src/traj_opt/src/: traj_opt_perching.cc
src/uav_fly/: CMakeLists.txt  package.xml
(+73 files in other folders)
